update aliases and tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # split panes using | and -
 set -sg escape-time 0
 bind | split-window -h
-bind - split-window -v
+bind _ split-window -v
 unbind '"'
 unbind %
 
@@ -16,3 +16,15 @@ bind -n M-j select-pane -D
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+
